# TermGrid

./: .gitignore  LICENSE  README.md  docs.md  main.py  pyproject.toml
src/termgrid/: __main__.py  app.py  config.py  db.py  static_names.py
src/termgrid/Forms/: NewServerForm.py
tests/: test_smoke.py
