[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termgrid"
version = "0.1.0"
description = "Gestor TUI de conexiones SSH/RDP/VNC con Textual"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tu Nombre", email = "aprieto@enerclic.es" }]
keywords = ["tui", "ssh", "rdp", "vnc", "servers", "textual"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
]

dependencies = [
  "textual>=0.55.1",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ertiti11/termgrid"
Issues = "https://github.com/ertiti11/termgrid/issues"

[project.scripts]
termgrid = "termgrid.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
